--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="">
-  <title>Glyn's Site</title>
   <head>
     <meta charset="utf-8">
-    <title></title>
+  <title>Glyn's Site</title>
   </head>
   <body>
     <header>Glyn Hunt</header>
-    <main></main>
+    <main>
+      <h1>Welcome to my new site</h1>
+
+    </main>
     <footer></footer>
   </body>
 </html>
